correccion de menu y ajuste de primera seccion (administracion de sistema) faltan pruebas de navegacion

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionPlantillas/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionPlantillas/crear.xhtml
@@ -8,9 +8,9 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Curso" url="#"/> 
-            <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}"/>
-            <p:menuitem value="Modificar Componente Interactivo" url="#"/>
+            <p:menuitem value="Administración de Sistema" url="#"/>
+            <p:menuitem value="Gestionar Plantillas" url="#{siteUrls.gestionPlantilla}"/>
+            <p:menuitem value="Creacion de Plantillas" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
@@ -22,35 +22,34 @@
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                     <p:outputLabel value="Esta ayuda sirve un monton"/>
                 </p:dialog>
+                <p:focus id="focus" context="p1"></p:focus>
                 <p:panelGrid columns="2" id="p1">
-                    <p:outputLabel for="nombre" value="Nombre: "></p:outputLabel>
-                    <p:inputText id="nombre" value="#{gestionComponentesInteractivosController.modifica.scNombre}" maxlength="#{tamanioUtils.nombreSuperCompMax}"></p:inputText>
-                    <p:outputLabel for="descripcion" value="Descripción: "></p:outputLabel>
-                    <p:inputText id="descripcion" value="#{gestionComponentesInteractivosController.modifica.scDescripcion}" maxlength="#{tamanioUtils.descSuperCompMax}"></p:inputText>
-                    <p:outputLabel for="tipo" value="Tipo de Componente: "></p:outputLabel>
-                    <p:selectOneMenu id="tipo" value="#{gestionComponentesInteractivosController.tipoSuperComponModifica}">
-                        <f:selectItems  itemValue="#{tipo.idTipoSuperCompon}" itemLabel="#{tipo.tscDescripcion}" value="#{gestionComponentesInteractivosController.listaTipo}" var="tipo"></f:selectItems>
-                    </p:selectOneMenu>                        
+                    <p:outputLabel for="nombre" value="Nombre de plantilla: "></p:outputLabel>
+                    <p:inputText id="nombre" tabindex="1" value="#{gestionPlantillasController.plantillaNuevo.plNombre}" required="true" requiredMessage="Debe ingresar un nombre" maxlength="#{tamanioUtils.nombrePlantillaMax}"></p:inputText>
+                    <p:outputLabel for="materia" value="Materia: "></p:outputLabel>
+                    <p:selectOneMenu id="materia" tabindex="2" value="#{gestionPlantillasController.plantillaNuevo.idMateria}" converter="materia"  filterMatchMode="contains" filter="true">
+                        <f:selectItems  itemValue="#{materia}" itemLabel="#{materia.idGrado.grNombre}-#{materia.maNombre}" value="#{gestionPlantillasController.materias}" var="materia"></f:selectItems>
+                    </p:selectOneMenu>
                     <p:outputLabel for="estado" value="Estado: " class="Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="estado" value="#{gestionComponentesInteractivosController.modifica.scEstado}" >
+                    <p:selectOneMenu id="estado"  tabindex="4" value="#{gestionPlantillasController.plantillaNuevo.plEstado}" >
                         <f:selectItem itemValue="A" itemLabel="Activo"></f:selectItem>
                         <f:selectItem itemValue="T" itemLabel="Trabajando"></f:selectItem>
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
-                    <p:commandButton value="Guardar" action="#{gestionComponentesInteractivosController.guardarModifica()}" update="p1" />
+                    <p:commandButton value="Guardar" action="#{gestionPlantillasController.guardar()}" update="p1,focus" oncomplete="configurarEnterTab()"/>
                     <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" />
+                        <p:ajax update="p1,focus" resetValues="true" oncomplete="configurarEnterTab()"/>
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" listener="#{gestionComponentesInteractivosController.setIndexMenu(0)}"/>
+                        <p:ajax update="p1" resetValues="true" listener="#{gestionPlantillasController.setIndexMenu(0)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Gestionar Archivos multimedia" url="#{siteUrls.gestionArchivosMultimedia}" >    
+                        <p:menuitem value="Programacion de clases" url="#{siteUrls.programacionClases}" >    
                         </p:menuitem>
-                        <p:menuitem value="Clase interactiva" url="#{siteUrls.claseInteractiva}">    
+                        <p:menuitem value="Clase interactiva" url="#{siteUrls.claseInteractiva}">
                         </p:menuitem>
                         <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}">
                         </p:menuitem>
