--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/ver.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Curso" url="#"/>
+            <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Mantenimiento de Archivos multimedia" url="#{siteUrls.gestionArchivosMultimedia}"/>
             <p:menuitem value="Ver Archivo Multimedia" url="#"/>
             <p:separator />
