--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/configurar.xhtml
@@ -29,7 +29,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Curso" url="#"/> 
+            <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}"/>
             <p:menuitem value="Configuracion de Componente Interactivo: #{gestionComponentesInteractivosController.config.scNombre}" url="#"/>
             <p:separator />
