--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Curso" url="#"/> 
+            <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}"/>
             <p:menuitem value="Busqueda de Componentes Interactivos" url="#"/>
             <p:separator />
