--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
@@ -8,7 +8,8 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Matricula de Alumnos" url="#{siteUrls.expedienteAlumnos}"/>
+            <p:menuitem value="Gestionar Año Escolar" url="#"/>
+            <p:menuitem value="Matricula de Alumno" url="#{siteUrls.gestionAnioEscolar}"/>
             <p:menuitem value="Modificar Matricula"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
