--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/crear.xhtml
@@ -20,8 +20,8 @@
         <p:panel>
             <h:form>
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton"/>
-                </p:dialog>
+                            <ui:include src="ayuda/crear.xhtml"></ui:include>
+                        </p:dialog>
                 <p:focus id="focus" context="p1"></p:focus>
                 <p:panelGrid columns="2" id="p1">
                     <p:outputLabel for="nombre" value="Nombre: "></p:outputLabel>
