--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/editar.xhtml
@@ -20,7 +20,7 @@
         <p:panel>
             <h:form enctype="multipart/form-data" >
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    <ui:include src="ayuda/editar.xhtml"></ui:include>
                 </p:dialog>
                 <p:focus id="focus" context="mod_p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="mod_p1">
