--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
@@ -20,7 +20,7 @@
         <p:panel>
             <h:form>
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    <ui:include src="ayuda/editar.xhtml"></ui:include>
                 </p:dialog>
                 <p:panelGrid columns="2" id="p1">
                     <p:outputLabel for="nombre" value="Nombre: "></p:outputLabel>
