--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/index.xhtml
@@ -55,6 +55,7 @@
                         <p:commandLink action="#{gestionCursoController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Curso" ></i></p:commandLink>
                             <p:commandLink action="#{gestionCursoController.modificar(car)}" ><i class="icon-compose Fs25 Red MarRight10" title="Modificar Curso" ></i></p:commandLink>
                             <p:commandLink action="#{gestionCursoController.gestionarCursoAlumno(car)}" rendered="#{!gestionarEvaluacionController.validaAlumno()}" ><i class="icon-portfolio Fs25 Red MarRight10" title="Inscribir alumnos" ></i></p:commandLink>
+                            <p:commandLink action="#{gestionCursoController.gestionarAlumnoInscrito(car)}"  rendered="#{loginController.mostrarA('1,2')}"> <i class="icon-portfolio Fs25 Red MarRight10" title="Consultar Alumnos inscritos" ></i></p:commandLink>
                             <p:commandLink action="#{gestionCursoController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
                                 <i class="icon-close Fs25 Red MarRight10" title="Eliminar Curso"></i>
                             </p:commandLink>
