--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/editar.xhtml
@@ -29,7 +29,7 @@
                     <p:inputText id="descripcion" value="#{gestionComponentesInteractivosController.modifica.scDescripcion}" maxlength="#{tamanioUtils.descSuperCompMax}"></p:inputText>
                     <p:outputLabel for="tipo" value="Tipo de Componente: "></p:outputLabel>
                     <p:selectOneMenu id="tipo" value="#{gestionComponentesInteractivosController.tipoSuperComponModifica}">
-                        <f:selectItems  itemValue="#{tipo.idTipoSuperCompon}" itemLabel="#{tipo.tscDescripcion}" value="#{gestionComponentesInteractivosController.listaTipo}" var="tipo"></f:selectItems>
+                        <f:selectItems  itemValue="#{tipo.idTipoSuperCompon}" itemLabel="#{tipo.tscDescripcion}" value="#{gestionComponentesInteractivosController.listaTipoModifica}" var="tipo"></f:selectItems>
                     </p:selectOneMenu>                        
                     <p:outputLabel for="estado" value="Estado: " class="Responsive"></p:outputLabel>
                     <p:selectOneMenu id="estado" value="#{gestionComponentesInteractivosController.modifica.scEstado}" >
@@ -37,6 +37,15 @@
                         <f:selectItem itemValue="T" itemLabel="Trabajando"></f:selectItem>
                     </p:selectOneMenu>
                 </p:panelGrid>
+                <p:tooltip for="nombre">
+                    <h:outputText value="Nombre del Componente Interactivo, ejemplo: Galería de volcanes de El Salvador"/>
+                </p:tooltip>
+                <p:tooltip for="descripcion">
+                    <h:outputText value="Descripción del Componente Interactivo, ejemplo: Contiene los 23 volcanes de El Salvador"/>
+                </p:tooltip>
+                <p:tooltip for="estado">
+                    <h:outputText value="activo:el Componente Interactivo puede ser utilizado, trabajando:el Componente Interactivo no puede ser utilizado"/>
+                </p:tooltip>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionComponentesInteractivosController.guardarModifica()}" update="p1" />
