--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/crear.xhtml
@@ -50,6 +50,15 @@
 
                     </p:fileUpload>
                 </p:panelGrid>
+                <p:tooltip for="nombre">
+                    <h:outputText value="Nombre del archivo multimedia, ejemplo: Proceso de fotosíntesis detallado"/>
+                </p:tooltip>
+                <p:tooltip for="estado">
+                    <h:outputText value="activo:el archivo puede ser utilizado, trabajando:el archivo no puede ser utilizado en ninguna clase"/>
+                </p:tooltip>
+                <p:tooltip for="archivo">
+                    <h:outputText value="Los archivos admitidos son: imagen-jpg, video-mp4 y audio-mp3"/>
+                </p:tooltip>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionArchivoMultimediaController.guardar()}" update="p1,focus" oncomplete="configurarEnterTab()"/>
