mantenimiento de materias y correccion de pantalla de grados

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
@@ -45,13 +45,13 @@
                     </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{catGradoController.mostrar(car)}" >
-                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver Tipo de elemento de plantilla"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver grado"></i>
                         </p:commandLink>
                         <p:commandLink action="#{catGradoController.modificar(car)}">
-                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Tipo de elemento de plantilla"></i>
+                            <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar grado"></i>
                         </p:commandLink>
                         <p:commandLink action="#{catGradoController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Tipo de elemento de plantilla"></i>
+                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar grado"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
