--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/ver.xhtml
@@ -10,8 +10,8 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Gestión de catalogos" url="#"/>
-            <p:menuitem value="Tipo de elemento de plantilla" url="#{siteUrls.catGrado}"/>
-            <p:menuitem value="Consultar tipo de elemento de plantilla" url="#"/>
+            <p:menuitem value="grado" url="#{siteUrls.catGrado}"/>
+            <p:menuitem value="Consultar grado" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
