--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/crear.xhtml
@@ -10,8 +10,8 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Gestión de catalogos" url="#"/>
-            <p:menuitem value="Tipo de elemento de plantilla" url="#{siteUrls.catTipoElemPlantilla}"/>
-            <p:menuitem value="Adicionar tipo de elemento de plantilla" url="#"/>
+            <p:menuitem value="Materia" url="#{siteUrls.catMateria}"/>
+            <p:menuitem value="Adicionar Materia" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
@@ -26,15 +26,15 @@
                 <p:focus id="focus" context="p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel for="nombre"  value="Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:inputText tabindex="1" id="nombre" value="#{catMateriaController.nuevo.teDescripcion}" required="true" requiredMessage="Debe ingresar un nombre al archivo" maxlength="#{tamanioUtils.nombreArchivoMax}"></p:inputText>
+                    <p:inputText tabindex="1" id="nombre" value="#{catMateriaController.nuevo.catNombre}" required="true" requiredMessage="Debe ingresar un nombre a la materia" maxlength="#{tamanioUtils.nombreArchivoMax}"></p:inputText>
                     <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu tabindex="2" id="estado" class=" Responsive" value="#{catMateriaController.nuevo.teEstado}">
+                    <p:selectOneMenu tabindex="2" id="estado" class=" Responsive" value="#{catMateriaController.nuevo.catEstado}">
                         <f:selectItem itemValue ="A" itemLabel="Activo"/>
                         <f:selectItem itemValue="P" itemLabel="Trabajando"/>
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <p:tooltip for="nombre">
-                    <h:outputText value="Nombre del tipo de elemento de plantilla, ejemplo: Marco teórico"/>
+                    <h:outputText value="Nombre de la materia, ejemplo: Matemáticas"/>
                 </p:tooltip>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
