--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/ver.xhtml
@@ -10,8 +10,8 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Gestión de catalogos" url="#"/>
-            <p:menuitem value="Tipo de elemento de plantilla" url="#{siteUrls.catTipoElemPlantilla}"/>
-            <p:menuitem value="Consultar tipo de elemento de plantilla" url="#"/>
+            <p:menuitem value="Materia" url="#{siteUrls.catMateria}"/>
+            <p:menuitem value="Consultar Materia" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
@@ -26,7 +26,7 @@
                 <p:focus id="focus" context="p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel for="nombre"  value="Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:outputLabel id="nombre" value="#{catMateriaController.ver.teDescripcion}"></p:outputLabel>
+                    <p:outputLabel id="nombre" value="#{catMateriaController.ver.catNombre}"></p:outputLabel>
                     <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
                     <p:outputLabel id="estado" value="#{catMateriaController.ver.estado}"></p:outputLabel> 
                 </p:panelGrid>
